crates/backend_csharp/tests/output/patterns/snapshots/r#mod__output__patterns__result__basic.snap
---
source: crates/backend_csharp/tests/output/patterns/result.rs
expression: output
---
// <auto-generated>
//
// This file was automatically generated by Interoptopus.
//
// Library:      
// Hash:         0xc80c5cacdc1999f6
// Namespace:    My.Company
// Builder:      interoptopus_csharp
//
// Do not edit this file manually.
//
// </auto-generated>

// We use [Obsolete()] to discourage users calling internal code. Disable internal warnings about that.
#pragma warning disable CS0612 // Type or member is obsolete
#pragma warning disable CS0618 // Type or member is obsolete (with message)
// Simplifies codegen
#pragma warning disable CS0105 // The using directive appeared previously in this namespace
#nullable enable
// Generated interop code uses patterns that trigger nullable diagnostics
#pragma warning disable CS8600 // Converting null literal or possible null value to non-nullable type
#pragma warning disable CS8601 // Possible null reference assignment
#pragma warning disable CS8602 // Dereference of a possibly null reference
#pragma warning disable CS8603 // Possible null reference return
#pragma warning disable CS8618 // Non-nullable field must contain a non-null value when exiting constructor
#pragma warning disable CS8625 // Cannot convert null literal to non-nullable reference type

#pragma warning disable 0105
using System;
using System.IO;
using System.Text;
using System.Threading;
using System.Threading.Tasks;
using System.ComponentModel;
using System.Collections;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using System.Runtime.InteropServices.Marshalling;
using System.Runtime.CompilerServices;
using My.Company.Common;

#pragma warning restore 0105


namespace My.Company;

public static partial class Interop {

    public const string NativeLib = "";

    
    [LibraryImport(NativeLib, EntryPoint = "roundtrip_result_51028")]
    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    public static partial ResultUintError roundtrip_result_51028(ResultUintError x);


    
    [LibraryImport(NativeLib, EntryPoint = "roundtrip_result_unit_err_9311")]
    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    public static partial ResultUintVoid roundtrip_result_unit_err_9311(ResultUintVoid x);


    
    [LibraryImport(NativeLib, EntryPoint = "roundtrip_result_unit_ok_43823")]
    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    public static partial ResultVoidError roundtrip_result_unit_ok_43823(ResultVoidError x);

}


/// Rust-like `Result` type usable over FFI.
public partial struct ResultUintError
{
    uint _variant;
    bool _hasValue;
    uint _Ok;
    Error _Err;
}


[Union]
[NativeMarshalling(typeof(MarshallerMeta))]
public partial struct ResultUintError : IUnion, IResult<uint, Error>
{
    public readonly record struct OkCase(uint Value);

    public readonly record struct ErrCase(Error Value);

    public readonly record struct PanicCase();

    public readonly record struct NullCase();

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct UnmanagedOk
    {
        internal uint _variant;
        internal uint _Ok;
    }

    
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct UnmanagedErr
    {
        internal uint _variant;
        internal Error _Err;
    }

    

    [StructLayout(LayoutKind.Explicit)]
    internal unsafe struct Unmanaged
    {
        [FieldOffset(0)]
        internal uint _variant;

        [FieldOffset(0)]
        internal UnmanagedOk _Ok;

        [FieldOffset(0)]
        internal UnmanagedErr _Err;

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        [Obsolete("This method is intended for use by generated code only.")]
        [EditorBrowsable(EditorBrowsableState.Never)]
        internal ResultUintError ToManaged()
        {
            return _variant switch
            {
                0 => new ResultUintError(new OkCase(_Ok._Ok)),
                1 => new ResultUintError(new ErrCase(_Err._Err)),
                2 => new ResultUintError(new PanicCase()),
                3 => new ResultUintError(new NullCase()),
                _ => throw new InteropException($"Unknown variant {_variant} for ResultUintError. The value did not originate from a well-formed Rust enum."),
            };
        }
    }


    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    [Obsolete("This method is intended for use by generated code only.")]
    [EditorBrowsable(EditorBrowsableState.Never)]
    internal Unmanaged ToUnmanaged()
    {
        if (!_hasValue) throw new InvalidOperationException("Cannot marshal a default ResultUintError: it is empty and corresponds to no Rust variant. Construct one through a case constructor or factory.");
        var _unmanaged = new Unmanaged();
        _unmanaged._variant = _variant;
        if (_variant == 0) _unmanaged._Ok._Ok = _Ok;
        if (_variant == 1) _unmanaged._Err._Err = _Err;
        return _unmanaged;
    }


    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    [Obsolete("This method is intended for use by generated code only.")]
    [EditorBrowsable(EditorBrowsableState.Never)]
    internal Unmanaged AsUnmanaged()
    {
        if (!_hasValue) throw new InvalidOperationException("Cannot marshal a default ResultUintError: it is empty and corresponds to no Rust variant. Construct one through a case constructor or factory.");
        var _unmanaged = new Unmanaged();
        _unmanaged._variant = _variant;
        if (_variant == 0) _unmanaged._Ok._Ok = _Ok;
        if (_variant == 1) _unmanaged._Err._Err = _Err;
        return _unmanaged;
    }


    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    public Exception ExceptionForVariant()
    {
        if (_variant == 0) return new EnumException<uint>(_Ok);
        if (_variant == 1) return new EnumException<Error>(_Err);
        if (_variant == 2) return new EnumException();
        if (_variant == 3) return new EnumException();
        throw new InteropException("Illegal enum state detected. This is a severe error and should never happen.");
    }


    // Union members
    public bool HasValue => _hasValue;

    public object? Value => !_hasValue ? null : _variant switch
    {
        0 => new OkCase(_Ok),
        1 => new ErrCase(_Err),
        2 => new PanicCase(),
        3 => new NullCase(),
        _ => null,
    };

    public bool TryGetValue(out OkCase value)
    {
        if (_hasValue && _variant == 0) { value = new OkCase(_Ok); return true; }
        value = default;
        return false;
    }

    public bool TryGetValue(out ErrCase value)
    {
        if (_hasValue && _variant == 1) { value = new ErrCase(_Err); return true; }
        value = default;
        return false;
    }

    public bool TryGetValue(out PanicCase value)
    {
        if (_hasValue && _variant == 2) { value = new PanicCase(); return true; }
        value = default;
        return false;
    }

    public bool TryGetValue(out NullCase value)
    {
        if (_hasValue && _variant == 3) { value = new NullCase(); return true; }
        value = default;
        return false;
    }


    // Ctors
    public static ResultUintError Ok(uint value) => new() { _variant = 0, _Ok = value, _hasValue = true };
    public static ResultUintError Err(Error value) => new() { _variant = 1, _Err = value, _hasValue = true };
    public static ResultUintError Panic => new() { _variant = 2, _hasValue = true };
    public static ResultUintError Null => new() { _variant = 3, _hasValue = true };

    // Checks
    public bool IsOk => _variant == 0;
    public bool IsErr => _variant == 1;
    public bool IsPanic => _variant == 2;
    public bool IsNull => _variant == 3;

    // Conversions
    public uint AsOk() { if (_variant != 0) { throw ExceptionForVariant(); } else { return _Ok; } }
    public Error AsErr() { if (_variant != 1) { throw ExceptionForVariant(); } else { return _Err; } }
    public void AsPanic() { if (_variant != 2) throw ExceptionForVariant(); }
    public void AsNull() { if (_variant != 3) throw ExceptionForVariant(); }

    // Case constructors — the union creation members the compiler reads case types from.
    public ResultUintError(OkCase value) { _variant = 0; _Ok = value.Value; _hasValue = true; }
    public ResultUintError(ErrCase value) { _variant = 1; _Err = value.Value; _hasValue = true; }
    public ResultUintError(PanicCase value) { _variant = 2; _hasValue = true; }
    public ResultUintError(NullCase value) { _variant = 3; _hasValue = true; }


    // FromCall
    public static ResultUintError FromCall(Func<uint> func)
    {
        try { return Ok(func()); }
        catch (Exception) { return Panic; }
    }

    public static async Task<ResultUintError> FromCallAsync(Func<Task<uint>> func)
    {
        try { return Ok(await func()); }
        catch (OperationCanceledException) { throw; }
        catch (Exception) { return Panic; }
    }


    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    public override string ToString()
    {
        if (_variant == 0) return "Ok(...)";
        if (_variant == 1) return "Err(...)";
        if (_variant == 2) return "Panic";
        if (_variant == 3) return "Null";
        throw new InteropException("Illegal enum state detected. This is a severe error and should never happen.");
    }



    [CustomMarshaller(typeof(ResultUintError), MarshalMode.Default, typeof(Marshaller))]
    private struct MarshallerMeta { }

    internal ref struct Marshaller
    {
        private ResultUintError _managed;
        private Unmanaged _unmanaged;

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public Marshaller(ResultUintError managed) { _managed = managed; }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public Marshaller(Unmanaged unmanaged) { _unmanaged = unmanaged; }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public void FromManaged(ResultUintError managed) { _managed = managed; }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public void FromUnmanaged(Unmanaged unmanaged) { _unmanaged = unmanaged; }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public Unmanaged ToUnmanaged() { return _managed.ToUnmanaged(); }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public ResultUintError ToManaged() { return _unmanaged.ToManaged(); }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public void Free() {}
    }

}



/// Rust-like `Result` type usable over FFI.
public partial struct ResultVoidError
{
    uint _variant;
    bool _hasValue;
    Error _Err;
}


[Union]
[NativeMarshalling(typeof(MarshallerMeta))]
public partial struct ResultVoidError : IUnion, IResult<Unit, Error>
{
    public readonly record struct OkCase();

    public readonly record struct ErrCase(Error Value);

    public readonly record struct PanicCase();

    public readonly record struct NullCase();

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct UnmanagedErr
    {
        internal uint _variant;
        internal Error _Err;
    }

    

    [StructLayout(LayoutKind.Explicit)]
    internal unsafe struct Unmanaged
    {
        [FieldOffset(0)]
        internal uint _variant;

        [FieldOffset(0)]
        internal UnmanagedErr _Err;

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        [Obsolete("This method is intended for use by generated code only.")]
        [EditorBrowsable(EditorBrowsableState.Never)]
        internal ResultVoidError ToManaged()
        {
            return _variant switch
            {
                0 => new ResultVoidError(new OkCase()),
                1 => new ResultVoidError(new ErrCase(_Err._Err)),
                2 => new ResultVoidError(new PanicCase()),
                3 => new ResultVoidError(new NullCase()),
                _ => throw new InteropException($"Unknown variant {_variant} for ResultVoidError. The value did not originate from a well-formed Rust enum."),
            };
        }
    }


    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    [Obsolete("This method is intended for use by generated code only.")]
    [EditorBrowsable(EditorBrowsableState.Never)]
    internal Unmanaged ToUnmanaged()
    {
        if (!_hasValue) throw new InvalidOperationException("Cannot marshal a default ResultVoidError: it is empty and corresponds to no Rust variant. Construct one through a case constructor or factory.");
        var _unmanaged = new Unmanaged();
        _unmanaged._variant = _variant;
        if (_variant == 1) _unmanaged._Err._Err = _Err;
        return _unmanaged;
    }


    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    [Obsolete("This method is intended for use by generated code only.")]
    [EditorBrowsable(EditorBrowsableState.Never)]
    internal Unmanaged AsUnmanaged()
    {
        if (!_hasValue) throw new InvalidOperationException("Cannot marshal a default ResultVoidError: it is empty and corresponds to no Rust variant. Construct one through a case constructor or factory.");
        var _unmanaged = new Unmanaged();
        _unmanaged._variant = _variant;
        if (_variant == 1) _unmanaged._Err._Err = _Err;
        return _unmanaged;
    }


    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    public Exception ExceptionForVariant()
    {
        if (_variant == 0) return new EnumException();
        if (_variant == 1) return new EnumException<Error>(_Err);
        if (_variant == 2) return new EnumException();
        if (_variant == 3) return new EnumException();
        throw new InteropException("Illegal enum state detected. This is a severe error and should never happen.");
    }


    // Union members
    public bool HasValue => _hasValue;

    public object? Value => !_hasValue ? null : _variant switch
    {
        0 => new OkCase(),
        1 => new ErrCase(_Err),
        2 => new PanicCase(),
        3 => new NullCase(),
        _ => null,
    };

    public bool TryGetValue(out OkCase value)
    {
        if (_hasValue && _variant == 0) { value = new OkCase(); return true; }
        value = default;
        return false;
    }

    public bool TryGetValue(out ErrCase value)
    {
        if (_hasValue && _variant == 1) { value = new ErrCase(_Err); return true; }
        value = default;
        return false;
    }

    public bool TryGetValue(out PanicCase value)
    {
        if (_hasValue && _variant == 2) { value = new PanicCase(); return true; }
        value = default;
        return false;
    }

    public bool TryGetValue(out NullCase value)
    {
        if (_hasValue && _variant == 3) { value = new NullCase(); return true; }
        value = default;
        return false;
    }


    // Ctors
    public static ResultVoidError Ok => new() { _variant = 0, _hasValue = true };
    public static ResultVoidError Err(Error value) => new() { _variant = 1, _Err = value, _hasValue = true };
    public static ResultVoidError Panic => new() { _variant = 2, _hasValue = true };
    public static ResultVoidError Null => new() { _variant = 3, _hasValue = true };

    // Checks
    public bool IsOk => _variant == 0;
    public bool IsErr => _variant == 1;
    public bool IsPanic => _variant == 2;
    public bool IsNull => _variant == 3;

    // Conversions
    public void AsOk() { if (_variant != 0) throw ExceptionForVariant(); }
    public Error AsErr() { if (_variant != 1) { throw ExceptionForVariant(); } else { return _Err; } }
    public void AsPanic() { if (_variant != 2) throw ExceptionForVariant(); }
    public void AsNull() { if (_variant != 3) throw ExceptionForVariant(); }

    // Case constructors — the union creation members the compiler reads case types from.
    public ResultVoidError(OkCase value) { _variant = 0; _hasValue = true; }
    public ResultVoidError(ErrCase value) { _variant = 1; _Err = value.Value; _hasValue = true; }
    public ResultVoidError(PanicCase value) { _variant = 2; _hasValue = true; }
    public ResultVoidError(NullCase value) { _variant = 3; _hasValue = true; }


    // FromCall
    public static ResultVoidError FromCall(Action action)
    {
        try { action(); return Ok; }
        catch (Exception) { return Panic; }
    }

    public static async Task<ResultVoidError> FromCallAsync(Func<Task> func)
    {
        try { await func(); return Ok; }
        catch (OperationCanceledException) { throw; }
        catch (Exception) { return Panic; }
    }


    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    public override string ToString()
    {
        if (_variant == 0) return "Ok";
        if (_variant == 1) return "Err(...)";
        if (_variant == 2) return "Panic";
        if (_variant == 3) return "Null";
        throw new InteropException("Illegal enum state detected. This is a severe error and should never happen.");
    }


    Unit IResult<Unit, Error>.AsOk()
    {
        AsOk();
        return Unit.Default;
    }


    [CustomMarshaller(typeof(ResultVoidError), MarshalMode.Default, typeof(Marshaller))]
    private struct MarshallerMeta { }

    internal ref struct Marshaller
    {
        private ResultVoidError _managed;
        private Unmanaged _unmanaged;

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public Marshaller(ResultVoidError managed) { _managed = managed; }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public Marshaller(Unmanaged unmanaged) { _unmanaged = unmanaged; }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public void FromManaged(ResultVoidError managed) { _managed = managed; }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public void FromUnmanaged(Unmanaged unmanaged) { _unmanaged = unmanaged; }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public Unmanaged ToUnmanaged() { return _managed.ToUnmanaged(); }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public ResultVoidError ToManaged() { return _unmanaged.ToManaged(); }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public void Free() {}
    }

}



public enum Error : byte
{
    Fail = 0,
}
