crates/backend_csharp/tests/output/patterns/snapshots/r#mod__output__patterns__result__common.snap
---
source: crates/backend_csharp/tests/output/patterns/result.rs
expression: output
---
// <auto-generated>
//
// This file was automatically generated by Interoptopus.
//
// Library:      
// Hash:         0xc80c5cacdc1999f6
// Namespace:    My.Company.Common
// Builder:      interoptopus_csharp
//
// Do not edit this file manually.
//
// </auto-generated>

// We use [Obsolete()] to discourage users calling internal code. Disable internal warnings about that.
#pragma warning disable CS0612 // Type or member is obsolete
#pragma warning disable CS0618 // Type or member is obsolete (with message)
// Simplifies codegen
#pragma warning disable CS0105 // The using directive appeared previously in this namespace
#nullable enable
// Generated interop code uses patterns that trigger nullable diagnostics
#pragma warning disable CS8600 // Converting null literal or possible null value to non-nullable type
#pragma warning disable CS8601 // Possible null reference assignment
#pragma warning disable CS8602 // Dereference of a possibly null reference
#pragma warning disable CS8603 // Possible null reference return
#pragma warning disable CS8618 // Non-nullable field must contain a non-null value when exiting constructor
#pragma warning disable CS8625 // Cannot convert null literal to non-nullable reference type

#pragma warning disable 0105
using System;
using System.IO;
using System.Text;
using System.Threading;
using System.Threading.Tasks;
using System.ComponentModel;
using System.Collections;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using System.Runtime.InteropServices.Marshalling;
using System.Runtime.CompilerServices;
using My.Company;

#pragma warning restore 0105


namespace My.Company.Common;

public static partial class Interop {

    public const string NativeLib = "";
}


/// Rust-like `Result` type usable over FFI.
public partial struct ResultUintVoid
{
    uint _variant;
    bool _hasValue;
    uint _Ok;
}


[Union]
[NativeMarshalling(typeof(MarshallerMeta))]
public partial struct ResultUintVoid : IUnion, IResult<uint, Unit>
{
    public readonly record struct OkCase(uint Value);

    public readonly record struct ErrCase();

    public readonly record struct PanicCase();

    public readonly record struct NullCase();

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct UnmanagedOk
    {
        internal uint _variant;
        internal uint _Ok;
    }

    

    [StructLayout(LayoutKind.Explicit)]
    internal unsafe struct Unmanaged
    {
        [FieldOffset(0)]
        internal uint _variant;

        [FieldOffset(0)]
        internal UnmanagedOk _Ok;

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        [Obsolete("This method is intended for use by generated code only.")]
        [EditorBrowsable(EditorBrowsableState.Never)]
        internal ResultUintVoid ToManaged()
        {
            var _managed = new ResultUintVoid();
            _managed._variant = _variant;
            _managed._hasValue = true;
            if (_variant == 0) _managed._Ok = _Ok._Ok;
            return _managed;
        }
    }


    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    [Obsolete("This method is intended for use by generated code only.")]
    [EditorBrowsable(EditorBrowsableState.Never)]
    internal Unmanaged ToUnmanaged()
    {
        if (!_hasValue) throw new InvalidOperationException("Cannot marshal a default ResultUintVoid: it is empty and corresponds to no Rust variant. Construct one through a case constructor or factory.");
        var _unmanaged = new Unmanaged();
        _unmanaged._variant = _variant;
        if (_variant == 0) _unmanaged._Ok._Ok = _Ok;
        return _unmanaged;
    }


    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    [Obsolete("This method is intended for use by generated code only.")]
    [EditorBrowsable(EditorBrowsableState.Never)]
    internal Unmanaged AsUnmanaged()
    {
        if (!_hasValue) throw new InvalidOperationException("Cannot marshal a default ResultUintVoid: it is empty and corresponds to no Rust variant. Construct one through a case constructor or factory.");
        var _unmanaged = new Unmanaged();
        _unmanaged._variant = _variant;
        if (_variant == 0) _unmanaged._Ok._Ok = _Ok;
        return _unmanaged;
    }


    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    public Exception ExceptionForVariant()
    {
        if (_variant == 0) return new EnumException<uint>(_Ok);
        if (_variant == 1) return new EnumException();
        if (_variant == 2) return new EnumException();
        if (_variant == 3) return new EnumException();
        throw new InteropException("Illegal enum state detected. This is a severe error and should never happen.");
    }


    // Union members
    public bool HasValue => _hasValue;

    public object? Value => !_hasValue ? null : _variant switch
    {
        0 => new OkCase(_Ok),
        1 => new ErrCase(),
        2 => new PanicCase(),
        3 => new NullCase(),
        _ => null,
    };

    public bool TryGetValue(out OkCase value)
    {
        if (_hasValue && _variant == 0) { value = new OkCase(_Ok); return true; }
        value = default;
        return false;
    }

    public bool TryGetValue(out ErrCase value)
    {
        if (_hasValue && _variant == 1) { value = new ErrCase(); return true; }
        value = default;
        return false;
    }

    public bool TryGetValue(out PanicCase value)
    {
        if (_hasValue && _variant == 2) { value = new PanicCase(); return true; }
        value = default;
        return false;
    }

    public bool TryGetValue(out NullCase value)
    {
        if (_hasValue && _variant == 3) { value = new NullCase(); return true; }
        value = default;
        return false;
    }


    // Ctors
    public static ResultUintVoid Ok(uint value) => new() { _variant = 0, _Ok = value, _hasValue = true };
    public static ResultUintVoid Err => new() { _variant = 1, _hasValue = true };
    public static ResultUintVoid Panic => new() { _variant = 2, _hasValue = true };
    public static ResultUintVoid Null => new() { _variant = 3, _hasValue = true };

    // Checks
    public bool IsOk => _variant == 0;
    public bool IsErr => _variant == 1;
    public bool IsPanic => _variant == 2;
    public bool IsNull => _variant == 3;

    // Conversions
    public uint AsOk() { if (_variant != 0) { throw ExceptionForVariant(); } else { return _Ok; } }
    public void AsErr() { if (_variant != 1) throw ExceptionForVariant(); }
    public void AsPanic() { if (_variant != 2) throw ExceptionForVariant(); }
    public void AsNull() { if (_variant != 3) throw ExceptionForVariant(); }

    // Case constructors — the union creation members the compiler reads case types from.
    public ResultUintVoid(OkCase value) { _variant = 0; _Ok = value.Value; _hasValue = true; }
    public ResultUintVoid(ErrCase value) { _variant = 1; _hasValue = true; }
    public ResultUintVoid(PanicCase value) { _variant = 2; _hasValue = true; }
    public ResultUintVoid(NullCase value) { _variant = 3; _hasValue = true; }


    // FromCall
    public static ResultUintVoid FromCall(Func<uint> func)
    {
        try { return Ok(func()); }
        catch (Exception) { return Panic; }
    }

    public static async Task<ResultUintVoid> FromCallAsync(Func<Task<uint>> func)
    {
        try { return Ok(await func()); }
        catch (OperationCanceledException) { throw; }
        catch (Exception) { return Panic; }
    }


    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    public override string ToString()
    {
        if (_variant == 0) return "Ok(...)";
        if (_variant == 1) return "Err";
        if (_variant == 2) return "Panic";
        if (_variant == 3) return "Null";
        throw new InteropException("Illegal enum state detected. This is a severe error and should never happen.");
    }


    Unit IResult<uint, Unit>.AsErr()
    {
        AsErr();
        return Unit.Default;
    }


    [CustomMarshaller(typeof(ResultUintVoid), MarshalMode.Default, typeof(Marshaller))]
    private struct MarshallerMeta { }

    internal ref struct Marshaller
    {
        private ResultUintVoid _managed;
        private Unmanaged _unmanaged;

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public Marshaller(ResultUintVoid managed) { _managed = managed; }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public Marshaller(Unmanaged unmanaged) { _unmanaged = unmanaged; }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public void FromManaged(ResultUintVoid managed) { _managed = managed; }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public void FromUnmanaged(Unmanaged unmanaged) { _unmanaged = unmanaged; }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public Unmanaged ToUnmanaged() { return _managed.ToUnmanaged(); }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public ResultUintVoid ToManaged() { return _unmanaged.ToManaged(); }

        [MethodImpl(MethodImplOptions.AggressiveOptimization)]
        public void Free() {}
    }

}


[Serializable]
[StructLayout(LayoutKind.Sequential)]
public partial struct Bool
{
    byte value;
}

public partial struct Bool
{
    public static readonly Bool True = new Bool { value = 1 };
    public static readonly Bool False = new Bool { value = 0 };

    public Bool(bool b)
    {
        value = (byte)(b ? 1 : 0);
    }

    public bool Is => value == 1;

    public static implicit operator Bool(bool b) => new Bool(b);
    public static implicit operator bool(Bool b) => b.Is;
}

public class InteropException(string text) : Exception(text) { }

public class EnumException() : InteropException($"Enum variant mismatch.")  { }

public class EnumException<T>(T t) : InteropException($"Enum variant mismatch.")
{
    public T Value { get; } = t;
}

[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal delegate void AsyncCallbackCommon(IntPtr data, IntPtr callback_data);

/// Wire-level discriminant for <c>AsyncOutcome&lt;T&gt;</c> on the Rust side
/// (see <c>interoptopus::pattern::asynk::AsyncOutcome</c>). Layout is
/// <c>#[repr(C, u8)]</c>: a one-byte tag at offset 0, then natural padding,
/// then the payload (only valid for <c>Ok</c>).
internal static class AsyncOutcomeTag
{
    public const byte Ok = 0;
    public const byte Cancelled = 1;
}

/// Mirror of Rust's <c>AsyncOutcome&lt;T&gt;</c>. Used both to read incoming
/// callback payloads and to construct outgoing ones from .NET plugins.
[StructLayout(LayoutKind.Sequential)]
internal struct AsyncOutcomeOf<T> where T : unmanaged
{
    public byte Tag;
    public T Value;
}

[StructLayout(LayoutKind.Sequential)]
internal partial struct AsyncCallbackCommonNative
{
    internal IntPtr _ptr;
    internal IntPtr _ts;
}

internal partial struct AsyncCallbackCommonNative
{
    /// Signals normal completion with no return value (corresponds to
    /// <c>AsyncCallback&lt;()&gt;</c> on the Rust side). Sends an
    /// <c>AsyncOutcome::Ok(())</c> tag (single zero byte).
    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    [Obsolete("This method is intended for use by generated code only.")]
    [EditorBrowsable(EditorBrowsableState.Never)]
    internal unsafe void UnsafeComplete()
    {
        if (_ptr == IntPtr.Zero) return;
        var fn = (delegate* unmanaged[Cdecl]<void*, IntPtr, void>)_ptr;
        byte tag = AsyncOutcomeTag.Ok;
        fn(&tag, _ts);
    }

    /// Signals normal completion with a value (corresponds to
    /// <c>AsyncCallback&lt;T&gt;</c> on the Rust side). Wraps <paramref name="t"/>
    /// in <c>AsyncOutcome::Ok</c> on the wire.
    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    [Obsolete("This method is intended for use by generated code only.")]
    [EditorBrowsable(EditorBrowsableState.Never)]
    internal unsafe void UnsafeComplete<T>(T t) where T : unmanaged
    {
        if (_ptr == IntPtr.Zero) return;
        var fn = (delegate* unmanaged[Cdecl]<AsyncOutcomeOf<T>*, IntPtr, void>)_ptr;
        var outcome = new AsyncOutcomeOf<T> { Tag = AsyncOutcomeTag.Ok, Value = t };
        fn(&outcome, _ts);
    }

    /// Signals cancellation. The Rust side will resolve the future to
    /// <c>Err(AsyncCancelled)</c>. Sends an <c>AsyncOutcome::Cancelled</c>
    /// tag (single byte equal to <c>1</c>); no payload follows.
    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    [Obsolete("This method is intended for use by generated code only.")]
    [EditorBrowsable(EditorBrowsableState.Never)]
    internal unsafe void UnsafeCompleteCancelled()
    {
        if (_ptr == IntPtr.Zero) return;
        var fn = (delegate* unmanaged[Cdecl]<void*, IntPtr, void>)_ptr;
        byte tag = AsyncOutcomeTag.Cancelled;
        fn(&tag, _ts);
    }
}

[CustomMarshaller(typeof(string), MarshalMode.ManagedToUnmanagedOut, typeof(ConstCStrMarshaller))]
internal static class ConstCStrMarshaller
{
    public static unsafe string? ConvertToManaged(byte* unmanaged)
        => unmanaged == null ? null : Marshal.PtrToStringAnsi((nint)unmanaged);
}

[StructLayout(LayoutKind.Sequential)]
internal partial struct TaskHandle
{
    private IntPtr _data;
    private IntPtr _abort_fn;
    private IntPtr _drop_fn;
}

internal partial struct TaskHandle : IDisposable
{
    /// Aborts the associated Rust async task. The spawned future will be
    /// dropped at its next <c>.await</c> point and the completion callback
    /// will fire with a <c>Panic</c> result.
    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    [Obsolete("This method is intended for use by generated code only.")]
    [EditorBrowsable(EditorBrowsableState.Never)]
    internal unsafe void Abort()
    {
        if (_abort_fn != IntPtr.Zero && _data != IntPtr.Zero)
        {
            ((delegate* unmanaged[Cdecl]<IntPtr, void>)_abort_fn)(_data);
        }
    }

    /// Frees the native handle resources without aborting the task.
    /// Must be called exactly once when the handle is no longer needed.
    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    [Obsolete("This method is intended for use by generated code only.")]
    [EditorBrowsable(EditorBrowsableState.Never)]
    public unsafe void Dispose()
    {
        if (_drop_fn != IntPtr.Zero && _data != IntPtr.Zero)
        {
            ((delegate* unmanaged[Cdecl]<IntPtr, void>)_drop_fn)(_data);
            _data = IntPtr.Zero;
            _abort_fn = IntPtr.Zero;
            _drop_fn = IntPtr.Zero;
        }
    }

    /// Creates a <see cref="TaskHandle"/> backed by a <see cref="CancellationTokenSource"/>.
    /// Calling <c>Abort</c> on the returned handle triggers <see cref="CancellationTokenSource.Cancel()"/>;
    /// calling <c>Dispose</c> frees the pinned GCHandle.
    [MethodImpl(MethodImplOptions.AggressiveOptimization)]
    [Obsolete("This method is intended for use by generated code only.")]
    [EditorBrowsable(EditorBrowsableState.Never)]
    internal static unsafe TaskHandle FromCancellationTokenSource(CancellationTokenSource cts)
    {
        var gcHandle = GCHandle.Alloc(cts);
        return new TaskHandle
        {
            _data = GCHandle.ToIntPtr(gcHandle),
            _abort_fn = (IntPtr)(delegate* unmanaged[Cdecl]<IntPtr, void>)&TaskHandleAbort,
            _drop_fn = (IntPtr)(delegate* unmanaged[Cdecl]<IntPtr, void>)&TaskHandleDrop,
        };
    }

    [UnmanagedCallersOnly(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static void TaskHandleAbort(IntPtr data)
    {
        var handle = GCHandle.FromIntPtr(data);
        if (handle.Target is CancellationTokenSource cts)
        {
            cts.Cancel();
        }
    }

    [UnmanagedCallersOnly(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static void TaskHandleDrop(IntPtr data)
    {
        var handle = GCHandle.FromIntPtr(data);
        if (handle.Target is CancellationTokenSource cts)
        {
            cts.Cancel();
            cts.Dispose();
        }
        handle.Free();
    }
}

/// <summary> A Unit type to represent Rust's <c>()</c>. </summary>
public struct Unit : IEquatable<Unit>
{
    /// <summary> The default unit value. </summary>
    public static readonly Unit Default;

    /// <inheritdoc/>
    public bool Equals(Unit other) => true;

    /// <inheritdoc/>
    public override bool Equals(object? obj) => obj is Unit;
    /// <inheritdoc/>
    public override int GetHashCode() => 0;

    /// <inheritdoc/>
    public override string ToString() => "()";
}

/// <summary> A result type to represent Rust's <c>Result&lt;T, E&gt;</c>. </summary>
/// <typeparam name="T"> The <c>Ok</c> type. </typeparam>
/// <typeparam name="TErr"> The <c>Err</c> type. </typeparam>
public interface IResult<out T, out TErr>
{
    /// <summary> Returns <c>true</c> if the result is <c>Ok</c>; otherwise, <c>false</c>. </summary>
    bool IsOk { get; }
    /// <summary> Returns <c>true</c> if the result is <c>Err</c>; otherwise, <c>false</c>. </summary>
    bool IsErr { get; }
    /// <summary> Returns <c>true</c> if the Rust implementation has panicked; otherwise, <c>false</c>. </summary>
    bool IsPanic { get; }
    /// <summary> Returns <c>true</c> if an invalid null was passed; otherwise, <c>false</c>. </summary>
    bool IsNull { get; }

    /// <summary> Unwraps the value of the result. </summary>
    /// <returns> The value, if the result is <see cref="IsOk"/>. </returns>
    /// <exception cref="EnumException{T}"> Thrown if the result is not <c>Ok</c>. </exception>
    T AsOk();
    /// <summary> Unwraps the error of the result. </summary>
    /// <returns> The error, if the result is <see cref="IsErr"/>. </returns>
    /// <exception cref="EnumException{TErr}"> Thrown if the result is not <c>Err</c>. </exception>
    TErr AsErr();

    /// <summary> Returns the exception for the internal result variant. </summary>
    /// <returns> An <see cref="EnumException{T}"/> or <see cref="EnumException{TErr}"/> for <c>Ok</c> / <c>Err</c> state, or an <see cref="EnumException"/> otherwise. </returns>
    Exception ExceptionForVariant();
}
